fix body overflow

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 
 header {
   text-align: center;
-  padding: 1.5rem;
+  padding: 1rem;
   background-color: #333;
   color: #fff;
 }
@@ -41,20 +41,20 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
-  padding: 2rem 0px;
+  gap: 0.5rem;
+  /* padding: 2rem 0px; */
 }
 
 section {
   width: 80%;
-  padding: 2.5rem;
+  padding: 1rem;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 footer {
   text-align: center;
-  padding: 1.5rem;
+  padding: 1rem;
   background-color: #333;
   color: #fff;
   flex: 1;
